--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/npm-debug.log*
-/yarn-error.log
-/yarn.lock
-/package-lock.json
-
-# production
-/dist
-/docs-dist
-
-# misc
+yarn.lock
+dist
+es
+lib
+.docz
+node_modules
+.history
+.idea
+.vscode
+coverage
+.doc
 .DS_Store
-
-# umi
 .umi
 .umi-production
-.umi-test
-.env.local
-
-# ide
-/.vscode
-/.idea
+page
+lerna-debug.log
+tsconfig.tsbuildinfo
+packages/hooks/README.md
