--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,5 @@
-**/*.svg
-**/*.ejs
-# **/*.html
-# package.json
+# packages/**/*.md
+# packages/**/*.mdx
+package.json
 .umi
 .umi-production
-.umi-test
