--- a/package.json
+++ b/package.json
@@ -1,42 +1,62 @@
 {
+  "name": "x-rhooks",
   "private": true,
-  "name": "bhooks",
-  "version": "1.0.0",
+  "workspaces": ["packages/*"],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:alvin0216/x-rhooks.git"
+  },
   "scripts": {
-    "start": "dumi dev",
+    "init": "rm -rf node_modules && npm install && npm run clean && npm run bootstrap && npm run build",
+    "start": "npm run dev",
+    "dev": "dumi dev",
     "docs:build": "dumi build",
-    "docs:deploy": "gh-pages -d docs-dist",
-    "build": "father-build",
-    "deploy": "npm run docs:build && npm run docs:deploy",
-    "release": "npm run build && npm publish",
-    "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
-    "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "docs:deploy": "dumi build && gh-pages -d docs-dist",
+    "bootstrap": "lerna bootstrap",
+    "clean": "lerna clean --yes",
+    "build": "lerna run build",
+    "test": "jest",
+    "lint": "eslint --ignore-pattern **/__tests__/* --ignore-pattern **/demo/* \"packages/*/src/**/*.{ts,tsx}\"",
+    "pub": "lerna publish"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "prettier --parser=typescript --write"
-    ]
-  },
-  "dependencies": {
-    "react": "^16.12.0"
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "devDependencies": {
-    "@umijs/test": "^3.0.5",
-    "dumi": "^1.0.16",
-    "father-build": "^1.17.2",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/react-hooks": "^2.0.1",
+    "@types/jest": "^24.9.1",
+    "@umijs/fabric": "^2.1.0",
+    "@umijs/plugin-sass": "^1.1.1",
+    "antd": "^4.3.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.12.0",
+    "del": "^5.1.0",
+    "dumi": "^1.1.7",
+    "enzyme": "^3.10.0",
+    "eslint": "^7.2.0",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "gh-pages": "^3.0.0",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.1",
-    "yorkie": "^2.0.0"
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "jest-fetch-mock": "^3.0.3",
+    "lerna": "^4.0.0",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.3.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2"
   }
 }
